# adaptor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
adaptor/: main.py
adaptor/.streamlit/: config.toml
adaptor/data/: config.json
adaptor/scripts/: user.py  utils.py
tests/: test_main.py
